# pixli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: REFACTORING.md  how_to_use.md  overview.md
docs/architecture/: system_overview.md
examples/shooter/: components.rs  config.rs  main.rs  map.rs  meshes.rs  mod.rs  run.rs  sound.rs  systems.rs
src/: app.rs  audio.rs  error.rs  input.rs  lib.rs  profiler.rs  time.rs  window.rs
src/ecs/: component.rs  entity.rs  mod.rs  world.rs
src/math/: color.rs  mat4.rs  mod.rs  quat.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
src/physics/: collider.rs  mod.rs  rigidbody.rs
src/platform/: constants.rs  graphics.rs  mod.rs  windowing.rs
src/renderer/: bloom.rs  bloom.wgsl  camera.rs  constants.rs  depth_prepass.wgsl  depth_unlit.wgsl  gpu_profiler.rs  init.rs  light.rs  material.rs  mesh.rs  mod.rs  pass_common.rs  post.rs  post.wgsl  shader.wgsl  shadow.wgsl  sky.wgsl  ssao.rs  ssao.wgsl  texture.rs  types.rs  unlit.wgsl
